fixed cart desc spacing

--- a/css/header.css
+++ b/css/header.css
@@ -48,7 +48,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  height: 30%;
+  height: auto;
   background-color: #e6e6e6;
   color: #131313;
   font-family: "Quicksand", sans-serif;
@@ -123,4 +123,8 @@ img {
   width: 200px;
   transition: 0.5s ease all;
   opacity: 100;
+}
+
+.add-class {
+  margin: 10px;
 }
